# eurorack

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
braids/: analog_oscillator.cc  analog_oscillator.h  braids.cc  digital_oscillator.cc  digital_oscillator.h  envelope.h  excitation.h  macro_oscillator.cc  macro_oscillator.h  makefile  parameter_interpolation.h  quantizer.cc  quantizer.h  quantizer_scales.h  resources.cc  resources.h  settings.cc  settings.h  signature_waveshaper.h  svf.h  ui.cc  ui.h  vco_jitter_source.h
branches/: branches.cc  makefile
clouds/: clouds.cc  cv_scaler.cc  cv_scaler.h  makefile  meter.h  resources.cc  resources.h  settings.cc  settings.h  ui.cc  ui.h
edges/: adc_acquisition.cc  adc_acquisition.h  audio_buffer.cc  audio_buffer.h  digital_oscillator.cc  digital_oscillator.h  edges.cc  hardware_config.h  makefile  midi.h  midi_handler.cc  midi_handler.h  note_stack.h  resources.cc  resources.h  settings.cc  settings.h  storage.h  timer_oscillator.cc  timer_oscillator.h  ui.cc  ui.h  voice_allocator.cc  voice_allocator.h
elements/: cv_scaler.cc  cv_scaler.h  elements.cc  makefile  meter.h  resources.cc  resources.h  ui.cc  ui.h
frames/: frames.cc  keyframer.cc  keyframer.h  makefile  poly_lfo.cc  poly_lfo.h  resources.cc  resources.h  ui.cc  ui.h
grids/: clock.cc  clock.h  grids.cc  hardware_config.h  makefile  pattern_generator.cc  pattern_generator.h  resources.cc  resources.h
marbles/: clock_self_patching_detector.h  cv_reader.cc  cv_reader.h  cv_reader_channel.h  io_buffer.h  makefile  marbles.cc  note_filter.h  resources.cc  resources.h  scale_recorder.h  settings.cc  settings.h  ui.cc  ui.h
peaks/: calibration_data.cc  calibration_data.h  gate_processor.h  io_buffer.h  makefile  peaks.cc  processors.cc  processors.h  resources.cc  resources.h  ui.cc  ui.h
plaits/: makefile  plaits.cc  pot_controller.h  resources.cc  resources.h  settings.cc  settings.h  ui.cc  ui.h  user_data.h  user_data_receiver.cc  user_data_receiver.h
rings/: cv_scaler.cc  cv_scaler.h  makefile  meter.h  resources.cc  resources.h  rings.cc  settings.cc  settings.h  ui.cc  ui.h
stages/: chain_state.cc  chain_state.h  cv_reader.cc  cv_reader.h  delay_line_16_bits.h  factory_test.cc  factory_test.h  io_buffer.h  makefile  makeflash.sh  oscillator.cc  oscillator.h  ramp_extractor.cc  ramp_extractor.h  resources.cc  resources.h  segment_generator.cc  segment_generator.h  settings.cc  settings.h  stages.cc  ui.cc  ui.h  variable_shape_oscillator.h
streams/: audio_cv_meter.h  compressor.h  (+24 more)
(+795 files in other folders)
